Upgrading my design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             
         </header>
         <nav>
-            <a href="#About-me">About Me</a>
+            <a href="#About-Me">About Me</a>
             <a href="#Work">Work</a>
             <a href="#Contact-Me">Contact Me</a>
             <a href="#Resume"> Resume</a>
@@ -23,14 +23,16 @@
            
             <section class="About-Me" id="About-Me">
                 <div class="About-me-title"> <h1>About Me</h1></div>
-                <div class="About-me-content"></div>
+                <div class="About-me-content">
+                    hello
+                </div>
             </section>
             <section class="Work" id="Work">
                 <div class="Work-title"> <h1>Work</h1></div>
-                <div class="Work-content"></div>
+                <div class="Work-content"> This is my work</div>
             </section>
-            <section class="#Contact-Me" id="Contact-Me">
-                <div class="Contact-me-title"> <h1>Contact</h1></div>
+            <section class="Contact-Me" id="Contact-Me">
+                <div class="Contact-me-title"> <h1>Contact Me</h1></div>
                 <div class="Contact-me-content"></div>
             </section>
         </main>
