design the potifolio to fit devices screen

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#About-Me">About Me</a>
         <a href="#Work">Work</a>
         <a href="#Contact-Me">Contact Me</a>
-        <a href="#Resume"> Resume</a>
+        <a href="./assets/Document/Resume.pdf"> Resume</a>
     </nav>
     <main>
 
@@ -28,21 +28,83 @@
                 <h1>About Me</h1>
             </div>
             <div class="About-me-content">
-                hello
+                <p> I am a male Rwandese living in United States of America in Big Rapids
+                    Michigan. I am currently under a K1 Visa (Fiance Visa) waiting for Permanent residence.
+                    I completed my undergraduate degree in Bachelor of Science 
+                    in Computer Science, National University of Rwanda. I worked as IT Manager 
+                    at RUSORORO INSTITUTE / APAER which among other responsibilities involves 
+                    maintaining high quality data systems and efficient operation of the entire
+                    IT infrastructure in the organization.
+                </p>
+                <br>
+                <p>
+                    My background in ICT is extensive more particularly in Networking, Programming, 
+                    Web Design using and managing computer networks, hardware, software, databases 
+                    and web based applications. I have gained good experience in working with, troubleshooting 
+                    and managing TCP/IP based computer networks in a client-server environment. I have also 
+                    developed a good understanding of the operation and maintenance of different computer hardware
+                    components and software applications. My career experience has also exposed me to attending to 
+                    different problems from the users and also advising them on good practices for maintaining 
+                    their computer systems. Experience has also given me the opportunity to develop personal 
+                    confidence, good teamwork and communication skills. 
+                </p>
             </div>
         </section>
         <section class="Work" id="Work">
             <div class="Work-title">
-                <h1>Work</h1>
+                <h1>Work </h1>
             </div>
-            <div class="Work-content"> This is my work</div>
+            <div class="Work-content">
+                <p> I am a male Rwandese living in United States of America in Big Rapids
+                    Michigan. I am currently under a K1 Visa (Fiance Visa) waiting for Permanent residence.
+                    I completed my undergraduate degree in Bachelor of Science 
+                    in Computer Science, National University of Rwanda. I worked as IT Manager 
+                    at RUSORORO INSTITUTE / APAER which among other responsibilities involves 
+                    maintaining high quality data systems and efficient operation of the entire
+                    IT infrastructure in the organization.
+                </p>
+                <br>
+                <p>
+                    My background in ICT is extensive more particularly in Networking, Programming, 
+                    Web Design using and managing computer networks, hardware, software, databases 
+                    and web based applications. I have gained good experience in working with, troubleshooting 
+                    and managing TCP/IP based computer networks in a client-server environment. I have also 
+                    developed a good understanding of the operation and maintenance of different computer hardware
+                    components and software applications. My career experience has also exposed me to attending to 
+                    different problems from the users and also advising them on good practices for maintaining 
+                    their computer systems. Experience has also given me the opportunity to develop personal 
+                    confidence, good teamwork and communication skills. 
+                </p>
+            </div>
         </section>
         <section class="Contact-Me" id="Contact-Me">
             <div class="Contact-me-title">
                 <h1>Contact Me</h1>
             </div>
-            <div class="Contact-me-content"></div>
+            <div class="Contact-me-content">
+                <p> I am a male Rwandese living in United States of America in Big Rapids
+                    Michigan. I am currently under a K1 Visa (Fiance Visa) waiting for Permanent residence.
+                    I completed my undergraduate degree in Bachelor of Science 
+                    in Computer Science, National University of Rwanda. I worked as IT Manager 
+                    at RUSORORO INSTITUTE / APAER which among other responsibilities involves 
+                    maintaining high quality data systems and efficient operation of the entire
+                    IT infrastructure in the organization.
+                </p>
+                <br>
+                <p>
+                    My background in ICT is extensive more particularly in Networking, Programming, 
+                    Web Design using and managing computer networks, hardware, software, databases 
+                    and web based applications. I have gained good experience in working with, troubleshooting 
+                    and managing TCP/IP based computer networks in a client-server environment. I have also 
+                    developed a good understanding of the operation and maintenance of different computer hardware
+                    components and software applications. My career experience has also exposed me to attending to 
+                    different problems from the users and also advising them on good practices for maintaining 
+                    their computer systems. Experience has also given me the opportunity to develop personal 
+                    confidence, good teamwork and communication skills. 
+                </p>
+            </div>
         </section>
+       
     </main>
     <footer>Designed and Developed by Jean de Dieu Habiyaremye</footer>
 </body>
