Working on my portifolio and works

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <div class="photo"></div>
-        <div class="Wel"> JEAN DE DIEU HABIYAREMYE POTIFOLIO</div>
+        <div class="Wel"> JEAN DE DIEU HABIYAREMYE PORTIFOLIO</div>
 
     </header>
     <nav>
@@ -55,26 +55,32 @@
                 <h1>Work </h1>
             </div>
             <div class="Work-content">
-                <p> I am a male Rwandese living in United States of America in Big Rapids
-                    Michigan. I am currently under a K1 Visa (Fiance Visa) waiting for Permanent residence.
-                    I completed my undergraduate degree in Bachelor of Science 
-                    in Computer Science, National University of Rwanda. I worked as IT Manager 
-                    at RUSORORO INSTITUTE / APAER which among other responsibilities involves 
-                    maintaining high quality data systems and efficient operation of the entire
-                    IT infrastructure in the organization.
-                </p>
-                <br>
-                <p>
-                    My background in ICT is extensive more particularly in Networking, Programming, 
-                    Web Design using and managing computer networks, hardware, software, databases 
-                    and web based applications. I have gained good experience in working with, troubleshooting 
-                    and managing TCP/IP based computer networks in a client-server environment. I have also 
-                    developed a good understanding of the operation and maintenance of different computer hardware
-                    components and software applications. My career experience has also exposed me to attending to 
-                    different problems from the users and also advising them on good practices for maintaining 
-                    their computer systems. Experience has also given me the opportunity to develop personal 
-                    confidence, good teamwork and communication skills. 
-                </p>
+                <div class="experience">
+                    <header class="works">Current Work</header>
+                    <div class="content">
+                        <p>Currently Enrolled in Bootcamp at Michigan State University in partnership with Edx</p>
+                        <a href="">My Online Portifolio</a>
+                    </div>
+                </div>
+                <div class="experince2">
+                    <div class="previousworks">
+                        <header></header>
+                        <img src="./assets/images/grad.jpg" alt="">
+                    </div>
+                    <div class="previousworks">
+                        <header></header>
+                        <img src="./assets/images/ust1.jpg" alt="">
+                    </div>
+                    <div class="previousworks">
+                        <header></header>
+                        <img src="./assets/images/ust2.jpg" alt="">
+                    </div>
+                    <div class="previousworks">
+                        <header></header>
+                        <img src="./assets/images/ustate.jpg" alt="">
+                    </div>
+                </div>
+               
             </div>
         </section>
         <section class="Contact-Me" id="Contact-Me">
@@ -82,26 +88,11 @@
                 <h1>Contact Me</h1>
             </div>
             <div class="Contact-me-content">
-                <p> I am a male Rwandese living in United States of America in Big Rapids
-                    Michigan. I am currently under a K1 Visa (Fiance Visa) waiting for Permanent residence.
-                    I completed my undergraduate degree in Bachelor of Science 
-                    in Computer Science, National University of Rwanda. I worked as IT Manager 
-                    at RUSORORO INSTITUTE / APAER which among other responsibilities involves 
-                    maintaining high quality data systems and efficient operation of the entire
-                    IT infrastructure in the organization.
-                </p>
-                <br>
-                <p>
-                    My background in ICT is extensive more particularly in Networking, Programming, 
-                    Web Design using and managing computer networks, hardware, software, databases 
-                    and web based applications. I have gained good experience in working with, troubleshooting 
-                    and managing TCP/IP based computer networks in a client-server environment. I have also 
-                    developed a good understanding of the operation and maintenance of different computer hardware
-                    components and software applications. My career experience has also exposed me to attending to 
-                    different problems from the users and also advising them on good practices for maintaining 
-                    their computer systems. Experience has also given me the opportunity to develop personal 
-                    confidence, good teamwork and communication skills. 
-                </p>
+               <span>Phone:(616)-441-9202</span>
+               <span> Email:jahdonah@yahoo.com</span>
+               <span>Address:117 Parkview Vlg </span>
+               <span>City: Big Rapids</span>
+               <span>State: Michigan</span>
             </div>
         </section>
        
