Adding some functionality on my portifolio

--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
                     <header class="works">Current Work</header>
                     <div class="content">
                         <p>Currently Enrolled in Bootcamp at Michigan State University in partnership with Edx</p>
-                        <a href="">My Online Portifolio</a>
+                        <a href="https://jahdona.github.io/Jean-de-Dieu-Potifolio/">My Online Portifolio</a>
                     </div>
                 </div>
                 <div class="experince2">
                     <div class="previousworks">
-                        <header></header>
+                        <header><button><a href="https://jahdona.github.io/Jean-de-Dieu-Potifolio/">Hoseon Online Marketing Project</a></button></header>
                         <img src="./assets/images/grad.jpg" alt="">
                     </div>
                     <div class="previousworks">
-                        <header></header>
+                        <header><button><a href="https://github.com/jahdona/prestudy-assignment">My Online First Project</a></button></header>
                         <img src="./assets/images/ust1.jpg" alt="">
                     </div>
                     <div class="previousworks">
-                        <header></header>
+                        <header><button><a href="https://jahdona.github.io/prestudy-assignment/">School Information System </a></button></header>
                         <img src="./assets/images/ust2.jpg" alt="">
                     </div>
                     <div class="previousworks">
-                        <header></header>
+                        <header><button><a href="https://github.com/jahdona/Jean-de-Dieu-Potifolio">Git Hub Repo</a></button></header>
                         <img src="./assets/images/ustate.jpg" alt="">
                     </div>
                 </div>
